# clogreader

./: .gitignore  CMakeLists.txt  README.md  task.md
msvc/CLogReader/: CLogReader.sln  CLogReader.vcxproj  CLogReader.vcxproj.filters
src/logreader/: CLogReader.cpp  CLogReader.h
src/main/: main.cpp
src/regex/: Matcher.cpp  Matcher.h  MyRegex.cpp  MyRegex.h  State.h  StateOfFSM.h  dynamic_array.h
src/tools/: MyString.h
tests/: CMakeLists.txt
tests/fileops/: CMakeLists.txt  FileTest.cpp
tests/logreader/: CMakeLists.txt  LogReaderTest.cpp
tests/regex/: CMakeLists.txt  RegexTest.cpp
